2005-07-09  Bruno coudoin  <bruno.coudoin@free.fr>

	Little change in the database. Replace name by firstname to avoid confusion.

	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/user_list.py:
	* src/gcompris/gcompris_db.c: (gcompris_get_users_from_group):
	* src/gcompris/profile.h:

2005-07-09  Yves Combe  <yves@ycombe.net>

	profile C implementation.

	* src/gcompris/gcompris.c: (gcompris_init):
	* src/gcompris/gcompris_db.c: (gcompris_db_init),
	(gcompris_db_get_board_id), (gcompris_db_remove_board),
	(gcompris_db_get_profile), (gcompris_get_users_from_group):
	* src/gcompris/gcompris_db.h:
	* src/gcompris/profile.c: (gcompris_get_profile),
	(gcompris_set_user), (gcompris_get_user):
	* src/gcompris/profile.h:

2005-07-07  Bruno coudoin  <bruno.coudoin@free.fr>

	Added groups administration module (empty yet)
	Added ordering feature in administration modules.
	Added missing copyright headers

	* boards/skins/default/config_groups.png:
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/module.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/admin/module_groups.py:
	* src/boards/python/admin/module_profiles.py:
	* src/boards/python/admin/module_users.py:
	* src/boards/python/administration.py:

2005-07-07  Yves Combe  <yves@ycombe.net>

	Localised title, and clean code.

	* src/boards/python/admin/board_list.py:

2005-07-07  Yves Combe  <yves@ycombe.net>

	fix missing updated file in previous commit.

	* src/boards/python/admin/Makefile.am:

2005-07-07  Yves Combe  <yves@ycombe.net>

	add treeview with icons for boards configuration.

	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/administration.py:

2005-07-07  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed the POTFILES.in
	Changed all gtk.FALSE by False in all python script.
	gtk.FALSE is deprecated
		
	* po/POTFILES.in:
	* src/boards/python/admin/class_list.py: